tests/frontend/pass/storageread0.act
constructor of Pass
interface constructor()

creates

	uint x := 0
	uint y := 2

behaviour f of Pass
interface f()

storage

	x => y
    y
