tests/frontend/fail/mapping_aliasing.act
constructor of A
interface constructor()

creates

  uint x := 0
  uint y := 0
  mapping(uint => uint) m := [ 0 := 0 ]

behaviour f of A
interface f()

storage

  m[x] => 0
  m[y] => 1
